--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -68,7 +68,7 @@
   margin-bottom: 20px;
   padding: 13px;
   border-radius: 15px;
-  border: solid 0.5px black;
+
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 
@@ -286,6 +286,93 @@ color: black;
 }
 
 
+/*Форма для добавления*/
+/* Add some spacing between form elements */
+.form-container {
+display: flex;
+justify-content: center;
+}
+
+.form-group {
+border:solid 1px black;
+width: 70%;
+border-radius: 25px;
+height: auto;
+box-shadow:40px 40px 30px rgba(0,0,0,0.06);
+    background: #DCDCDC;
+}
+
+/* Style form labels */
+.form-group label {
+padding-left: 5%;
+  padding-top: 5%;
+
+  font-weight: bold;
+
+}
+
+/* Style form inputs */
+.form-group input[type="text"] {
+  width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: vertical;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+    margin-left: 3%;
+    margin-bottom: 2%;
+}
+
+.form-group input[type="number"] {
+  width: 30%;
+  padding: 12px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: vertical;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+    margin-left: 3%;
+    margin-bottom: 2%;
+}
+
+.form-group textarea {
+  width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: vertical;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+    margin-left: 3%;
+    margin-bottom: 2%;
+}
+
+.form-group select {
+  width: 30%;
+  padding: 12px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: vertical;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+    margin-left: 3%;
+    margin-bottom: 2%;
+}
+
+/* Style submit button */
+.form-group button[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+/* Change button background on hover */
+.form-group button[type="submit"]:hover {
+  background-color: #0069d9;
+}
 
 
 
