--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -286,6 +286,8 @@ color: black;
 }
 
 
+
+
 /*Форма для добавления*/
 /* Add some spacing between form elements */
 .form-container {
@@ -293,21 +295,28 @@ display: flex;
 justify-content: center;
 }
 
-.form-group {
-border:solid 1px black;
-width: 70%;
+.form-style-add-rental {
+
+width: 80%;
+padding: 2%;
 border-radius: 25px;
 height: auto;
 box-shadow:40px 40px 30px rgba(0,0,0,0.06);
-    background: #DCDCDC;
+background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(13px);
+}
+
+.form-group{
+display: flex;
+align-items: center;
 }
 
 /* Style form labels */
 .form-group label {
-padding-left: 5%;
-  padding-top: 5%;
 
+color: white;
   font-weight: bold;
+  margin-right: -1%;
 
 }
 
@@ -319,8 +328,8 @@ padding-left: 5%;
     border-radius: 20px;
     resize: vertical;
     box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-    margin-left: 3%;
-    margin-bottom: 2%;
+
+
 }
 
 .form-group input[type="number"] {
@@ -331,8 +340,20 @@ padding-left: 5%;
     border-radius: 20px;
     resize: vertical;
     box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-    margin-left: 3%;
-    margin-bottom: 2%;
+
+
+}
+
+.form-group input[type="file"] {
+  width: 30%;
+  padding: 12px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: vertical;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+
+
 }
 
 .form-group textarea {
@@ -342,8 +363,8 @@ padding-left: 5%;
     border-radius: 20px;
     resize: vertical;
     box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-    margin-left: 3%;
-    margin-bottom: 2%;
+
+
 }
 
 .form-group select {
@@ -355,23 +376,31 @@ padding-left: 5%;
     resize: vertical;
     box-shadow:4px 4px 10px rgba(0,0,0,0.06);
     margin-left: 3%;
-    margin-bottom: 2%;
+
 }
 
 /* Style submit button */
-.form-group button[type="submit"] {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 0.25rem;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
+.button-submit-form-add {
+  width: 30%;
+    padding: 8px;
+    border: none;
+    border-radius: 25px;
+    color: #3a3a3a;
+    font-weight: bold;
+    font-size: 16px;
+    background-color: white;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+    border: solid 1px white;
 }
 
 /* Change button background on hover */
-.form-group button[type="submit"]:hover {
-  background-color: #0069d9;
+.button-submit-form-add:hover {
+  border-radius: 10px;
+	border: solid 1px white;
+    background-color: #3a3a3a;
+    color:  white;
 }
 
 
